--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -219,8 +219,14 @@ Es gilt also $P(A)=1$ mit $A=\{\omega\in\Omega\mid Z_{k_i}(\omega)\xrightarrow{i
 Nun benutzen wir das, was wir in Punkt 2 bewiesen haben, nämlich punktweise für $a_k=Z_k(\omega)$ für alle $\omega\in A$.
 Da auf $A$ gilt, $a_{k_i}\xrightarrow{i\to\infty}0$ und $a_k$ auch fallend ist, gilt mit Punkt 2 für die gleichen $\omega\in A$, dass $Z_k(\omega)\xrightarrow{k\to\infty}0$.
 Da wir vorhin gesagt haben, dass $P(A)=1$, ist somit auch $P\bigl(Z_k(\omega)\xrightarrow{k\to\infty}0\bigr)=1$.
+Da für $m\geq k$ gilt, dass
+\begin{align*}
+  \sup_{n\geq k}\Bigl|\sum_{i=k+1}^nX_i\Bigr|
+  &\geq\Bigl|\sum_{i=k+1}^mX_i\Bigr|\geq\sum_{i=k+1}^mX_i
+\end{align*}
+wird die rechte Seite für hinreichend große $k$ und $m$ beliebig klein.
 Das heißt, $Z_k$ konvergiert also fast sicher gegen 0.
-\emph{Hier fehlt noch eine letzte Überlegung, warum dann $\sum_{k=1}^n X_k\xrightarrow{n\to\infty}0$.}
+
 \newpage
 
 
