wrote reference to handwritten solutions

--- a/homeworks/07/sol/07.tex
+++ b/homeworks/07/sol/07.tex
@@ -39,6 +39,7 @@ Gehen Sie dabei wie folgt vor:
 \item[ii)] Existenz: Definieren Sie das Maß $Q^+$ auf $(\Omega,{\cal F})$ durch $Q^+[A]:=E[\mathbbm{1}_AX^+]$ und analog $Q^-$.
   Konstruieren Sie nun die bedingte Erwartung mit dem Satz von Radon--Nikodym.
 \end{itemize}
+\emph{Siehe hier handschriftliche Abgabe.}
 \newpage
 
 \paragraph{B7A2}
@@ -55,6 +56,7 @@ sind messbar bezüglich ${\cal B}^\mathbb{N}:=\bigotimes_{i\in\mathbb{N}}{\cal B
 
 Generell ist eine Menge $A$ genau dann messbar bezüglich $\bigotimes_{\in\in\mathbb{N}}\mathcal{B}(\mathbb{R})$, wenn $A\in\bigotimes_{\in\in\mathbb{N}}\mathcal{B}(\mathbb{R})$.
 Hierbei gilt $\bigotimes_{\in\in\mathbb{N}}\mathcal{B}(\mathbb{R})=\sigma\bigl(A_J\times\Omega_{\mathbb{N}\setminus J}\mid J=\{j_1,\dots,j_n\},A_{j_k}\in\mathcal{B}(\mathbb{R})\bigr)$.
+\emph{Hier haben wir keine Idee gehabt, wie man die Messbarkeit prüft.}
 \newpage
 
 \paragraph{B7A3}
@@ -134,8 +136,7 @@ Der Satz von Fubini lautet,
 \[
   \int h\mathrm{d}(\lambda\otimes\kappa_1)=\int\Bigl(\int h(x,y)\kappa_1(x,\mathrm{d}y)\Bigr)\lambda(\mathrm{d}x)
 \]
-\emph{Hier ist noch unklar, was das Produkt der Übergangskern ist.}
-Satz 14.19 in \cite{Klenke}
+\emph{Hier ist noch unklar, was das Produkt der Übergangskerne ist. Hier könnte Satz 14.19 in \cite{Klenke} hilfreich sein. Siehe hier handschriftliche Abgabe.}
 \newpage
 
 
