--- a/homeworks/09/sol/09.tex
+++ b/homeworks/09/sol/09.tex
@@ -39,7 +39,18 @@ Damit ist für $(P_i^{\pi_k})_{i\in I}$ für alle Projektionen $\pi_1,\dots,\pi_
 
 Seien nun für alle Projektionen $\pi_1,\dots,\pi_d$ die Familien der Bildmaße $(P_i^{\pi_k})_{i\in I}$ straff.
 Dann gibt es für alle $\varepsilon>0$ Kompakta $K_1,\dots,K_d$, sodass für alle $i\in I$ gilt $P_i^{\pi_k}(K_k)=P_i\bigl(\pi_k^{-1}\bigr(K_k)\bigr)>1-\varepsilon$.
-%Betrachte $K=\bigtimes_{k=1}^dK_k$.
+Dann gibt es auch abgeschlossene Kugeln $\overline{B}_r(0)\supset K_k$, sodass $P_i^{\pi_k}\bigl(\overline{B}_r(0)\bigr)>1-\varepsilon$.
+Betrachte $K=\bigtimes_{k=1}^d\overline{B}_r(0)$.
+Dann gilt für alle $i\in I$, dass $P_i(K)=P_i(\{\omega\in\mathbb{R}^d\mid \forall k\leq d~|\omega_k|\leq r\})$.
+Entsprechend gilt, dass
+\begin{align*}
+  P_i(K^\mathrm{c})
+  &=P_i\Bigl(\bigcup\nolimits_{k=1}^d\{|\omega_k|>r\}\Bigr).
+    \intertext{durch die $\sigma$-Subadditivität der Maße $P_i$ können wir abschätzen}
+  &\leq\sum\nolimits_{k=1}^d P_i(|\omega_k|>r)\,,
+    \intertext{wobei $\{|\omega_k|>r\}=\overline{B}_r(0)^\mathrm{c}$, sodass}
+\end{align*}
+
 %Für alle $k\leq d$ gilt $K\subset\pi_k^{-1}(K_k)$.
 % Tipp: https://math.stackexchange.com/questions/2915057/if-the-coordinates-of-random-vectors-are-tight-are-the-random-vectors-tight
 \newpage
