--- a/homeworks/09/sol/09.tex
+++ b/homeworks/09/sol/09.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[a4paper,margin=1.875in,top=1.875in,bottom=1.875in]{geometry}
+\usepackage[a4paper,margin=1.875in,top=1.5in,bottom=1.5in]{geometry}
 
 \usepackage{amsmath,mathtools,bbm,amssymb}
 \usepackage[german]{babel}
@@ -39,19 +39,24 @@ Damit ist für $(P_i^{\pi_k})_{i\in I}$ für alle Projektionen $\pi_1,\dots,\pi_
 
 Seien nun für alle Projektionen $\pi_1,\dots,\pi_d$ die Familien der Bildmaße $(P_i^{\pi_k})_{i\in I}$ straff.
 Dann gibt es für alle $\varepsilon>0$ Kompakta $K_1,\dots,K_d$, sodass für alle $i\in I$ gilt $P_i^{\pi_k}(K_k)=P_i\bigl(\pi_k^{-1}\bigr(K_k)\bigr)>1-\varepsilon$.
-Dann gibt es auch abgeschlossene Kugeln $\overline{B}_r(0)\supset K_k$, sodass $P_i^{\pi_k}\bigl(\overline{B}_r(0)\bigr)>1-\varepsilon$.
+Sei $r>0$ so, dass $\overline{B}_r(0)\supset K_k$.
+Dann gilt auch $P_i^{\pi_k}\bigl(\overline{B}_r(0)\bigr)>1-\varepsilon$.
 Betrachte $K=\bigtimes_{k=1}^d\overline{B}_r(0)$.
-Dann gilt für alle $i\in I$, dass $P_i(K)=P_i(\{\omega\in\mathbb{R}^d\mid \forall k\leq d~|\omega_k|\leq r\})$.
+Dann gilt für alle $i\in I$, dass $P_i(K)=P_i\bigl(\bigcap_{k=1}^d\{|\omega_k|\leq r\}\bigr)$.
 Entsprechend gilt, dass
 \begin{align*}
   P_i(K^\mathrm{c})
   &=P_i\Bigl(\bigcup\nolimits_{k=1}^d\{|\omega_k|>r\}\Bigr).
     \intertext{durch die $\sigma$-Subadditivität der Maße $P_i$ können wir abschätzen}
   &\leq\sum\nolimits_{k=1}^d P_i(|\omega_k|>r)\,,
-    \intertext{wobei $\{|\omega_k|>r\}=\overline{B}_r(0)^\mathrm{c}$, sodass}
+    \intertext{wobei $\{|\omega_k|>r\}=\pi_k^{-1}\bigl(\overline{B}_r(0)^\mathrm{c}\bigr)$, sodass}
+  &\leq\sum\nolimits_{k=1}^d P_i^{\pi_k}\bigl(\overline{B}_r(0)^\mathrm{c}\bigr)\,.
+    \intertext{Da wir $r$ so gewählt haben, dass $P_i^{\pi_k}\bigl(\overline{B}_r(0)\bigr)>1-\varepsilon$, erhalten wir}
+    &\leq d\varepsilon.
 \end{align*}
-
-%Für alle $k\leq d$ gilt $K\subset\pi_k^{-1}(K_k)$.
+Sei nun $\delta>0$ gegeben.
+Wähle $\varepsilon=\delta/d$, dann gilt für alle $i\in I$, dass $P_i(K)>1-\delta$.
+Somit ist $(P_i)$ straff.
 % Tipp: https://math.stackexchange.com/questions/2915057/if-the-coordinates-of-random-vectors-are-tight-are-the-random-vectors-tight
 \newpage
 
