Added back direction for a1

--- a/homeworks/10/sol/10.tex
+++ b/homeworks/10/sol/10.tex
@@ -64,7 +64,7 @@ Für den Abstand von $P(Y_n=j)$ und $P(Y=j)$ gilt mithilfe Rücktransformation
   &\xrightarrow{n\to\infty}0\,.
 \end{align*}
 
-Wenn andererseits für alle \emph{Rückrichtung anfügen}
+Wenn andererseits für alle $j\in\mathbb{Z}$ gilt, dass $P(Y_n=j)\xrightarrow{n\to\infty}P(Y=j)$, dann gilt auch $\sum_{j\in\mathbb{Z}}f(j)P(Y_n=j)\xrightarrow{n\to\infty}\sum_{j\in\mathbb{Z}}f(j)P(Y=j)$ für alle $f\in{\cal C}_\mathrm{b}$ und somit $Y_n\Rightarrow Y$.
 \newpage
 
 \bibliography{../../../books/wt}
