Added exercise 3 and some hints for exercise 4

--- a/books/wt.bib
+++ b/books/wt.bib
@@ -1,3 +1,18 @@
+@MISC {4438264,
+TITLE = {Compute explicitly Lévy–Prokhorov metric for $2$ finite Dirac measures},
+AUTHOR = {Analyst},
+HOWPUBLISHED = {Mathematics Stack Exchange},
+NOTE = {2022-04-28},
+URL = {https://math.stackexchange.com/q/4438264}
+}
+@MISC {217980,
+TITLE = {Equivalence of Lebesgue expectation to discrete expectation for discrete random variables},
+AUTHOR = {Davide Giraudo},
+HOWPUBLISHED = {Mathematics Stack Exchange},
+NOTE = {2012-10-21},
+EPRINT = {https://math.stackexchange.com/q/217980},
+URL = {https://math.stackexchange.com/q/217980}
+}
 @book{klenke,
 title =     {Wahrscheinlichkeitstheorie},
 author =    {Achim Klenke},
